@@ -14,3 +14,5 @@ template <int> struct B
 {
     int foo() { return A::i; }	// { dg-error "this location" }
 };
+
+template struct B<0>;
